fixed margin issues on mobile

--- a/webpage-style.css
+++ b/webpage-style.css
@@ -77,7 +77,7 @@ html {
 }
 
 #about-me {
-    margin-top: 50px;
+    margin: 50px 0 15px 0;
     font-family: 'Lato', sans-serif;
 }
 
@@ -87,8 +87,8 @@ html {
     border: 1px solid #8c8a7b;
     background-color: rgba(224, 200, 173, .5);
     width: 100vw;
-    padding: 10px;
-    margin: 15px;
+    /*padding: 10px;*/
+    /*margin: 15px;*/
     font-family: 'Lato', sans-serif;
 }
 
@@ -101,7 +101,7 @@ html {
     border: 1px solid #8c8a7b;
     background-color: rgba(224, 200, 173, .5);
     width: 100vw;
-    padding: 15px;
+    /*padding: 15px;*/
     font-family: 'Lato', sans-serif;
 }
 
@@ -128,7 +128,7 @@ html {
     background-color: #fffee8;
     width: 100%;
     /*height: 25vw;*/
-    padding: 10px;
+    /*padding: 10px;*/
     /*margin-bottom: 10px;*/
     font-family: 'Lato', sans-serif;
 
@@ -144,7 +144,7 @@ html {
 .carousel-control-next-icon, .carousel-control-prev-icon {
     background-color: #8a3e05;
     border-radius: 30%;
-    padding: 12%;
+    /*padding: 12%;*/
 }
 
 .carousel-control-prev, .carousel-control-next {
